[Makefile] set hpp_benchmark branch to master.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -139,7 +139,7 @@ robot_model_py_repository=${LAAS_REPO}
 iai_maps_branch=master
 iai_maps_repository=${HPP_REPO}
 
-hpp_benchmark_branch=v4.8.0
+hpp_benchmark_branch=master
 hpp_benchmark_repository=${HPP_REPO}
 
 hpp-environments_branch=v4.4.0
