Revert "[Makefile] Switch to python3."
This reverts commit 8d4babc92378ed859210d6b7dac2acb72e64b288.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -83,7 +83,6 @@ hpp-core_extra_flags=${HPP_EXTRA_FLAGS}
 
 hpp-corbaserver_branch=${HPP_VERSION}
 hpp-corbaserver_repository=${HPP_REPO}
-hpp-corbaserver_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 hpp-walkgen_branch=${HPP_VERSION}
 hpp-walkgen_repository=${HPP_REPO}
@@ -103,7 +102,6 @@ hpp-manipulation-urdf_repository=${HPP_REPO}
 
 hpp-manipulation-corba_branch=${HPP_VERSION}
 hpp-manipulation-corba_repository=${HPP_REPO}
-hpp-manipulation-corba_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 ifeq (${HUMANOID}, TRUE)
   hpp-manipulation_extra_flags=-DHPP_MANIPULATION_HAS_WHOLEBODY_STEP=TRUE
@@ -113,18 +111,15 @@ endif
 
 hpp_tutorial_branch=${HPP_VERSION}
 hpp_tutorial_repository=${HPP_REPO}
-hpp_tutorial_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 hpp-gepetto-viewer_branch=${HPP_VERSION}
 hpp-gepetto-viewer_repository=${HPP_REPO}
-hpp-gepetto-viewer_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 hpp-plot_branch=${HPP_VERSION}
 hpp-plot_repository=${HPP_REPO}
 
 hpp-gui_branch=${HPP_VERSION}
 hpp-gui_repository=${HPP_REPO}
-hpp-gui_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 # }}}
 ##################################
@@ -132,14 +127,13 @@ hpp-gui_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 example-robot-data_branch=devel
 example-robot-data_repository=${GEPETTO_REPO}
-example-robot-data_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3 -DBUILD_PYTHON_INTERFACE=OFF
+example-robot-data_extra_flags= -DBUILD_PYTHON_INTERFACE=OFF
 
 hrp2-14-description_branch=master
 hrp2-14-description_repository=${TRAC_REPO}
 
 hpp-hrp2_branch=devel
 hpp-hrp2_repository=${HPP_REPO}
-hpp-hrp2_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 robot_capsule_urdf_branch=groovy
 robot_capsule_urdf_repository=${LAAS_REPO}
@@ -155,22 +149,19 @@ hpp_benchmark_repository=${HPP_REPO}
 
 hpp-environments_branch=${HPP_VERSION}
 hpp-environments_repository=${HPP_REPO}
-hpp-environments_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 universal_robot_branch=kinetic
 universal_robot_repository=${HPP_REPO}
 
 hpp-universal-robot_branch=${HPP_VERSION}
 hpp-universal-robot_repository=${HPP_REPO}
-hpp-universal-robot_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 hpp-baxter_branch=${HPP_VERSION}
 hpp-baxter_repository=${HPP_REPO}
-hpp-baxter_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 hpp_romeo_branch=${HPP_VERSION}
 hpp_romeo_repository=${HPP_REPO}
-hpp_romeo_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
+
 
 # }}}
 ##################################
@@ -225,14 +216,13 @@ OpenSceneGraph-3.4.0_extra_flags= -DDESIRED_QT_VERSION=${QT_VERSION} -DCOLLADA_D
 gepetto-viewer_branch=${HPP_VERSION}
 gepetto-viewer_repository=${GEPETTO_REPO}
 ifeq (${QT_VERSION}, 5)
-	gepetto-viewer_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3 -DPROJECT_USE_QT4=OFF
+	gepetto-viewer_extra_flags= -DPROJECT_USE_QT4=OFF
 else
-	gepetto-viewer_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3 -DPROJECT_USE_QT4=ON
+	gepetto-viewer_extra_flags= -DPROJECT_USE_QT4=ON
 endif
 
 gepetto-viewer-corba_branch=${HPP_VERSION}
 gepetto-viewer-corba_repository=${GEPETTO_REPO}
-gepetto-viewer-corba_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 pythonqt_branch=qt${QT_VERSION}
 pythonqt_repository=${GEPETTO_REPO}
@@ -248,7 +238,7 @@ endif
 
 hpp-tools_branch=${HPP_VERSION}
 hpp-tools_repository=${HPP_REPO}
-hpp-tools_extra_flags= -DPYTHON_EXECUTABLE=/usr/bin/python3
+hpp-tools_extra_flags=
 
 # }}}
 ##################################
