--- a/.dockers/ubuntu-18.04/Dockerfile
+++ b/.dockers/ubuntu-18.04/Dockerfile
@@ -14,55 +14,46 @@ RUN echo "deb [arch=amd64] http://robotpkg.openrobots.org/packages/debian/pub bi
 RUN curl http://robotpkg.openrobots.org/packages/debian/robotpkg.key | apt-key add -
 
 RUN apt-get update -y && apt-get install -y \
-    autoconf \
-    g++ \
-    cmake \
-    doxygen \
-    libassimp-dev \
-    libboost-dev \
-    libcdd-dev \
-    libglpk-dev \
-    liburdfdom-dev \
-    robotpkg-osg-dae \
-    robotpkg-qpoases+doc \
-    robotpkg-roboptim-core \
-    robotpkg-roboptim-trajectory \
-    robotpkg-romeo-description \
-    ros-melodic-xacro \
-    ros-melodic-kdl-parser \
-    ros-melodic-common-msgs \
-    ros-melodic-tf \
-    ros-melodic-tf-conversions \
-    libccd-dev \
-    ros-melodic-octomap \
-    ros-melodic-resource-retriever \
-    ros-melodic-srdfdom \
-    ros-melodic-pr2-description \
-    flex \
-    bison \
-    asciidoc \
-    source-highlight \
-    git \
-    libomniorb4-dev \
-    omniorb-nameserver \
-    omniidl \
-    omniidl-python \
-    libltdl-dev \
-    python-matplotlib \
-    libxml2-dev \
-    libtinyxml2-dev \
-    liblog4cxx-dev \
-    libltdl-dev \
-    qt4-dev-tools \
-    libqt4-opengl-dev \
-    libqtwebkit-dev \
-    libqtgui4 \
-    oxygen-icon-theme \
-    libopenscenegraph-dev \
-    openscenegraph \
-    libpcre3-dev \
-    sudo \
-    wget \
+      g++ \
+      cmake \
+      doxygen \
+      libboost-dev \
+      liburdfdom-dev \
+      libassimp-dev \
+      libeigen3-dev \
+      libgraphviz-dev \
+      robotpkg-qpoases+doc \
+      robotpkg-roboptim-core \
+      robotpkg-roboptim-trajectory \
+      robotpkg-romeo-description \
+      robotpkg-ros-baxter-common \
+      robotpkg-ros-universal-robot \
+      robotpkg-py36-omniorbpy \
+      ros-melodic-xacro \
+      libccd-dev \
+      ros-melodic-octomap \
+      ros-melodic-resource-retriever \
+      ros-melodic-srdfdom \
+      ros-melodic-pr2-description \
+      git \
+      libomniorb4-dev \
+      omniorb-nameserver \
+      omniidl \
+      omniidl-python \
+      libltdl-dev \
+      python-matplotlib \
+      libxml2 \
+      libtinyxml2-dev \
+      qt4-dev-tools \
+      libqt4-opengl-dev \
+      libqtgui4 \
+      libqtwebkit-dev \
+      oxygen-icon-theme \
+      libopenscenegraph-dev \
+      openscenegraph \
+      libpcre3-dev \
+      wget \
+      sudo \
  && apt-get remove -y texlive-latex-base texlive-binaries ghostscript \
  && apt-get autoremove -y \
  && rm -rf /var/lib/apt/lists/*
