Upgrade version of pinocchio and add hpp-baxter in test-ci dependencies.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -44,7 +44,7 @@ INSTALL_DOCUMENTATION=ON
 ##################################
 # {{{ Dependencies
 
-pinocchio_branch=v2.4.4
+pinocchio_branch=v2.4.5
 pinocchio_repository=${SOT_REPO}
 pinocchio_extra_flags= -DBUILD_PYTHON_INTERFACE=OFF -DBUILD_UNIT_TESTS=OFF -DBUILD_WITH_COLLISION_SUPPORT=ON
 
@@ -252,7 +252,8 @@ all: hpp_tutorial.install hpp-gepetto-viewer.install hpp-plot.install hpp-gui.in
 	${MAKE} hpp-doc.install
 
 # For test on gepgitlab, install robot packages first
-test-ci: example-robot-data.install  hpp-environments.install
+test-ci: example-robot-data.install  hpp-environments.install \
+	hpp-baxter.install
 	${MAKE} hpp_tutorial.install hpp-gepetto-viewer.install hpp-rbprm-corba.install \
 	hpp-universal-robot.install && \
 	${MAKE} hpp-doc.install
