--- a/.dockers/ubuntu-16.04/Dockerfile.premade
+++ b/.dockers/ubuntu-16.04/Dockerfile.premade
@@ -1,3 +1,3 @@
-FROM memmos.laas.fr:5000/humanoid-path-planner/hpp-doc/ubuntu:16.04
+FROM gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/ubuntu:16.04
 
 ENV DEVEL_HPP_DIR /workspace
