--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,17 +73,17 @@ variables:
       paths:
         - workspace
 
-master-18.04-build:
-    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/master-premade:18.04
+stable-18.04-build:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/stable-premade:18.04
     only:
-      - master
+      - stable
     <<: *build_definition
 
-master-16.04-build:
-    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/master-premade:16.04
+stable-16.04-build:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/stable-premade:16.04
     allow_failure: true
     only:
-      - master
+      - stable
     <<: *build_definition
 
 devel-18.04-build:
@@ -99,21 +99,21 @@ devel-16.04-build:
       -  devel
     <<: *build_definition
 
-master-18.04-test:
-    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/master-premade:18.04
+stable-18.04-test:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/stable-premade:18.04
     dependencies:
-      - master-18.04-build
+      - stable-18.04-build
     only:
-      - master
+      - stable
     <<: *test_definition
 
-master-16.04-test:
+stable-16.04-test:
     allow_failure: true
-    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/master-premade:16.04
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/stable-premade:16.04
     dependencies:
-      - master-16.04-build
+      - stable-16.04-build
     only:
-      - master
+      - stable
     <<: *test_definition
 
 
@@ -134,21 +134,21 @@ devel-16.04-test:
       -  devel
     <<: *test_definition
 
-master-18.04-doc:
-    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/master-premade:18.04
+stable-18.04-doc:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/stable-premade:18.04
     dependencies:
-      - master-18.04-build
+      - stable-18.04-build
     only:
-      - master
+      - stable
     <<: *doc_definition
 
-master-16.04-doc:
-    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/master-premade:16.04
+stable-16.04-doc:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc/stable-premade:16.04
     allow_failure: true
     dependencies:
-      - master-16.04-build
+      - stable-16.04-build
     only:
-      - master
+      - stable
     <<: *doc_definition
 
 devel-18.04-doc:
