[Cmake] Fix link to HPP packages.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,10 +51,10 @@ ADD_HPP_PKG(hpp_tutorial)
 FOREACH(PKG ${SETUP_DOC_PKG})
   ADD_PROJECT_DEPENDENCY(${PKG})
 
-  STRING(REGEX REPLACE "[^a-zA-Z0-9]" "_" PREFIX "${PKG}")
-  STRING(TOUPPER ${PREFIX} PREFIX)
-  STRING(REGEX REPLACE "[^a-zA-Z0-9]" "" DOC_VAR "${PKG}")
-  STRING(TOUPPER ${DOC_VAR} DOC_VAR)
+  SET(PREFIX "${PKG}")
+  SET(DOC_VAR "${PKG}")
+  LIST(APPEND LOGGING_WATCHED_VARIABLES
+    ${PREFIX}_FOUND)
   IF(${PREFIX}_FOUND)
     IF(DEFINED ${PREFIX}_DOXYGENDOCDIR)
       SET(DOC_PREFIX ${${PREFIX}_DOXYGENDOCDIR})
@@ -90,6 +90,8 @@ make update
     ENDIF(DEFINED ${PKG}_robotpkg_package)
     CONFIGURE_FILE(doc/missing.dox.in ${CMAKE_BINARY_DIR}/doc/${PKG}-missing.dox @ONLY)
   ENDIF(${PREFIX}_FOUND)
+    LIST(APPEND LOGGING_WATCHED_VARIABLES ${DOC_VAR}_URL ${DOC_VAR}_LINK)
+
 ENDFOREACH(PKG ${SETUP_DOC_PKG})
 
 CONFIG_FILES(doc/main.dox doc/doxygenLayout.xml)
