--- a/doc/main.dox.in
+++ b/doc/main.dox.in
@@ -30,10 +30,10 @@ The packages are distributed into the following categories:
       <img src="../figures/archi.svg" alt="Overview of the architecture" style="max-height: 50vh"/>
   </td><td width="5%">
   </td><td width="30%">
-    The algorithmic part, built on @HPPCORE_LINK@ is
+    The algorithmic part, built on @hpp-core_LINK@ is
     embedded in corba servers implemented by
-    @HPPCORBASERVER_LINK@ or extensions like
-    @HPPMANIPULATIONCORBA_LINK@.
+    @hpp-corbaserver_LINK@ or extensions like
+    @hpp-manipulation-corba_LINK@.
     The corba servers are linked to executable \c hppcorbaserver.
     <p></p>
     From a python terminal, clients to the corba servers can be created in order
@@ -42,13 +42,13 @@ The packages are distributed into the following categories:
     <p></p>
     Results of path planning requests as well as individual configurations can
     be displayed in \c gepetto-gui via package
-    @HPPGEPETTOVIEWER_LINK@.
+    @hpp-gepetto-viewer_LINK@.
   </td></tr>
 </table>
 
 \par Getting started
 
-Package @HPPTUTORIAL_LINK@ provides some examples of
+Package @hpp_tutorial_LINK@ provides some examples of
 how to use this project.
 
 **/
@@ -59,27 +59,24 @@ how to use this project.
 
 \section hpp_doc_algorithms_technical_tools Technical tools
 
-- @HPPUTIL_LINK@: technical tools for the HPP project (logging, benchmark, quality assurance tools),
+- @hpp-util_LINK@: technical tools for the HPP project (logging, benchmark, quality assurance tools),
 
 \section hpp_doc_algorithms_motion_planning Motion planning for humanoid systems
 
 \par Kinematic chain with geometry
-- @HPPFCL_LINK@: Modified version of Flexible collision library, for collision detection and distance computation,
-- @PINOCCHIO_LINK@: implementation of kinematic chain with dynamic computations,
-- @HPPPINOCCHIO_LINK@: Interface between pinocchio and hpp-core,
+- @hpp-fcl_LINK@: Modified version of Flexible collision library, for collision detection and distance computation,
+- @pinocchio_LINK@: implementation of kinematic chain with dynamic computations,
+- @hpp-pinocchio_LINK@: Interface between pinocchio and hpp-core,
 
 \par Non linear constraints
-- @HPPCONSTRAINTS_LINK@: definition of some nonlinear constraints,
+- @hpp-constraints_LINK@: definition of some nonlinear constraints,
 
 \par Path planning
-- @HPPCORE_LINK@: definition of basic classes, path planning problems and solvers,
-
-\par Path Planning for humanoid robots
-- @HPPWHOLEBODYSTEP_LINK@: whole-body and walk planning using sliding path approximation.
+- @hpp-core_LINK@: definition of basic classes, path planning problems and solvers,
 
 \par Manipulation Planning
-- @HPPMANIPULATION_LINK@: Manipulation planning
-- @HPPMANIPULATIONURDF_LINK@: Manipulation planning
+- @hpp-manipulation_LINK@: Manipulation planning
+- @hpp-manipulationurdf_LINK@: Manipulation planning
 
 **/
 
@@ -90,8 +87,8 @@ how to use this project.
 \par Packages implementing CORBA interfaces
 
 The following packages implement Corba communication functionalities
-\li @HPPCORBASERVER_LINK@ : Corba server embedding a hpp::core::ProblemSolver instance.
-\li @HPPMANIPULATIONCORBA_LINK@ : Corba server for @HPPMANIPULATION_LINK@.
+\li @hpp-corbaserver_LINK@ : Corba server embedding a hpp::core::ProblemSolver instance.
+\li @hpp-manipulation-corba_LINK@ : Corba server for @hpp-manipulation_LINK@.
 
  **/
 
@@ -102,9 +99,9 @@ The following packages implement Corba communication functionalities
 \par Packages implementing graphical user interface
 
 The following packages implement a corba connection with a graphical display
-\li @GEPETTOVIEWER_LINK@ : Graphical window based on OpenSceneGraph.
-\li @GEPETTOVIEWERCORBA_LINK@ : Corba interface to gepetto-gui.
-\li @HPPGEPETTOVIEWER_LINK@ : Link between hpp and gepetto-viewer-corba.
+\li @gepetto-viewer_LINK@ : Graphical window based on OpenSceneGraph.
+\li @gepetto-viewer-corba_LINK@ : Corba interface to gepetto-gui.
+\li @hpp-gepetto-viewer_LINK@ : Link between hpp and gepetto-viewer-corba.
 
  **/
 
