OSG, OSG-Qt & pythonqt → robotpkg

--- a/.dockers/ubuntu-18.04/Dockerfile
+++ b/.dockers/ubuntu-18.04/Dockerfile
@@ -30,8 +30,9 @@ RUN apt-get update -qqy \
     libgraphviz-dev \
     libltdl-dev \
     libomniorb4-dev \
-    libopenscenegraph-dev \
     libpcre3-dev \
+    libpythonqt-qtall-qt5-python2-dev \
+    libpythonqt-qtall-qt5-python3-dev \
     libqt4-opengl-dev \
     libqtgui4 \
     libqtwebkit-dev \
@@ -39,7 +40,6 @@ RUN apt-get update -qqy \
     liburdfdom-dev \
     libxml2 \
     omniorb-nameserver \
-    openscenegraph \
     oxygen-icon-theme \
     python-matplotlib \
     python-omniorb \
@@ -47,11 +47,13 @@ RUN apt-get update -qqy \
     qtbase5-dev \
     qttools5-dev \
     robotpkg-omniorb \
+    robotpkg-openscenegraph \
     robotpkg-qpoases+doc \
     robotpkg-roboptim-core \
     robotpkg-roboptim-trajectory \
     robotpkg-romeo-description \
     robotpkg-py36-omniorbpy \
+    robotpkg-qt5-osgqt \
     ros-${ROS}-octomap \
     ros-${ROS}-pr2-description \
     ros-${ROS}-resource-retriever \
