docker 18.04: add graphviz

--- a/.dockers/ubuntu-18.04/Dockerfile
+++ b/.dockers/ubuntu-18.04/Dockerfile
@@ -21,6 +21,7 @@ RUN apt-get update -qqy \
     doxygen \
     g++ \
     git \
+    graphviz \
     libassimp-dev \
     libboost-dev \
     libccd-dev \
