CI: add more unit tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,14 +33,14 @@ variables:
       - $DEVEL_HPP_DIR/test.sh hpp-statistics              || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-constraints             || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-core                    || status=1
-        #- $DEVEL_HPP_DIR/test.sh hpp-corbaserver          || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-corbaserver             || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-manipulation            || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-manipulation-urdf       || status=1
-        #- $DEVEL_HPP_DIR/test.sh hpp-manipulation-corba   || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-manipulation-corba      || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-walkgen                 || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-wholebody-step          || status=1
-        #- $DEVEL_HPP_DIR/test.sh hpp-wholebody-step-corba || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-rbprm                   || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-rbprm-corba             || status=1
       - set -e
       - exit $status
     allow_failure: true
