--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -1,16 +1,14 @@
-version: "3"
+version: "3.7"
 services:
   hpp-demo:
     init: true
     image: hpp-demo
+    build: .
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
     environment:
       - DISPLAY=${DISPLAY}
       - QT_X11_NO_MITSHM="1"
     network_mode: "host"
-    privileged: true
     stop_signal: SIGINT
-    security_opt:
-      - seccomp:unconfined
-    command: [ "/hpp_entrypoint.sh", "hppcorbaserver" ]
+    command: hppcorbaserver
